<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/page_search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"/>
    <item
        android:id="@+id/page_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"

        android:title="@string/history"/>
    <item
        android:id="@+id/page_saved"
        android:enabled="true"
        android:icon="@drawable/ic_save"

        android:title="@string/saved"
        />
    <item
        android:id="@+id/page_settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"

        android:title="@string/settings"
        />
</menu>