<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SettingsFragment"
    >

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/filter_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/filter_settings"
        android:textSize="17sp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/filter_settings_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/filter_settings_title"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-14dp"
        android:layout_marginEnd="10dp"

        android:theme="@style/SwitchSetting" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/filter_settings_title"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray" />

    <GridLayout
        android:id="@+id/zipcode_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="2"
        android:alignmentMode="alignBounds"
        >

        <TextView
            android:id="@+id/tvZipcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/zipcode" />

        <EditText
            android:id="@+id/etZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:inputType="number"
            android:maxLength="5"
            android:theme="@style/editTextTheme"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:text="@string/department"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <EditText
            android:id="@+id/etDepartement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:theme="@style/editTextTheme"/>
    </GridLayout>

    <Button
        android:id="@+id/save_filter_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/zipcode_wrapper"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/red_700"
        android:text="@string/save" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/save_filter_settings"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/history_settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/history_settings"
        android:textSize="17sp" />

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/history_settings_title"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray" />

    <Button
        android:id="@+id/bt_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:backgroundTint="@color/red_700"
        android:text="@string/clear_history" />

</RelativeLayout>