<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.SearchFragment"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/search_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/company_name"
            android:singleLine="true"
            android:theme="@style/editTextTheme"
            />
        <ImageButton
            android:id="@+id/bt_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:background="@null"
            android:padding="7dp"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/filterLinearLayoutFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_wrapper"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <EditText
            android:id="@+id/etDepartement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="0.5"
            android:theme="@style/editTextTheme"

            android:hint="@string/department"
            android:inputType="number"
            android:maxLength="3" />

        <EditText
            android:id="@+id/etZipCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="0.5"
            android:theme="@style/editTextTheme"

            android:hint="@string/zipcode"
            android:inputType="number"
            android:maxLength="5" />
    </LinearLayout>

    <!--<EditText
        android:id="@+id/etNaf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/filterLinearLayoutFilter"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/naf_et"

        android:singleLine="true" />-->

    <!--<Spinner
        android:id="@+id/spinnerNaf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="10dp" />-->

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/filterLinearLayoutFilter"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tvnbresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvnbresult"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:id="@+id/companyprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        />

</RelativeLayout>